--- a/branding/supplemental-ui/suma-github/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma-github/partials/header-content.hbs
@@ -2,9 +2,9 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <div class="navbar-item">
-        <a href="https://opensource.suse.com/doc-susemanager/">SUSE Manager</a>
+        <a href="{{or site.url (or siteRootUrl siteRootPath)}}">SUSE Manager</a>
         <span class="separator">//</span>
-        <a href="https://opensource.suse.com/doc-susemanager/">Documentation</a>
+        <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Documentation</a>
       </div>
       <div class="navbar-item">
         <input id="search-input" type="text" placeholder="Search docs">
