--- a/branding/supplemental-ui/suma-github/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma-github/partials/header-content.hbs
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <div class="navbar-item">
-        <a href="{{or site.url (or siteRootUrl siteRootPath)}}">SUSE Manager</a>
+        <a href="https://opensource.suse.com/doc-susemanager">SUSE Manager</a>
         <span class="separator">//</span>
         <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Documentation</a>
       </div>
