fixed twitter icon overflow

--- a/branding/supplemental-ui/suma-susecom/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma-susecom/partials/header-content.hbs
@@ -31,7 +31,7 @@
 
           </div>
          </div>
-
+         <div>
          <a class="navbar-item" href="https://twitter.com/susemanager?lang=de">
           <span class="icon">
             <svg aria-hidden="true" data-icon="twitter" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -39,7 +39,6 @@
             </svg>
           </span>
         </a>
-
       </div>
     </div>
   </nav>
