--- a/branding/supplemental-ui/suma-susecom/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma-susecom/partials/header-content.hbs
@@ -3,9 +3,9 @@
     <div class="navbar-brand">
       <div class="navbar-item">
           <a class=" navbar-logo" href="https://www.suse.com/documentation/suse-manager-3/index.html"><img class="logo" src="{{uiRootPath}}/img/suse_logo.png"/></a>
-        <a href="https://opensource.suse.com/doc-susemanager/index.html">SUSE Manager</a>
+        <!-- <a href="https://opensource.suse.com/doc-susemanager/index.html">SUSE Manager</a>
         <span class="separator">//</span>
-          <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Documentation</a>
+          <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Documentation</a> -->
       </div>
       <div class="navbar-item">
         <input id="search-input" type="text" placeholder="Search docs">
