adjusted production ui

--- a/branding/supplemental-ui/suma/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/partials/header-content.hbs
@@ -16,12 +16,12 @@
       </button>
     </div>
 <!-- Comment out this section and the twitter section for Product WebUI docs (SUMA) -->
-         <div id="topbar-nav" class="navbar-menu">
+      <!--   <div id="topbar-nav" class="navbar-menu">
            <div class="navbar-end">
              <div class="navbar-item has-dropdown is-hoverable">
                <div class="navbar-link">Resources</div>
                <div class="navbar-dropdown">
-                <!--  <div class="navbar-item"><strong>Resources</strong></div> -->
+
                    <a class="navbar-item" href="https://github.com/SUSE/doc-susemanager"><i class="fab fa-github"></i>&nbsp;doc-susemanager</a>
                  <a class="navbar-item" href="https://github.com/SUSE/doc-susemanager/issues"><i class="fab fa-github"></i>&nbsp;Report Issue</a>
                  <a class="navbar-item" href="https://github.com/SUSE/doc-susemanager/wiki/Asciidoc-getting-started"><i class="fas fa-user-edit"></i>&nbsp;Contribute</a>
@@ -38,7 +38,7 @@
             </svg>
           </span>
         </a>
-
+-->
       </div>
     </div>
   </nav>
