--- a/branding/supplemental-ui/suma/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/partials/header-content.hbs
@@ -6,6 +6,7 @@
         <span class="separator">//</span>
         <a href="index-suma.html">Documentation</a>
       </div>
+        <!--
       <div class="navbar-item">
         <input id="search-input" type="text" placeholder="Search docs">
       </div>
@@ -14,7 +15,7 @@
         <span></span>
         <span></span>
       </button>
-    </div>
+    </div> -->
 <!-- Comment out this section and the twitter section for Product WebUI docs (SUMA) -->
       <!--   <div id="topbar-nav" class="navbar-menu">
            <div class="navbar-end">
