updated susecom supplimental files for use with algolia.

--- a/branding/supplemental-ui/suma-susecom/partials/footer-content.hbs
+++ b/branding/supplemental-ui/suma-susecom/partials/footer-content.hbs
@@ -5,9 +5,9 @@
 <script>
 function focusSearchInput () { document.querySelector('#search-input').focus() }
 var search = docsearch({
-  appId: 'X90GSPGHD0',
-  apiKey: '88197b3f73fb857531da692e68b19b07',
-  indexName: 'manager',
+  appId: 'QFB3LB7ZIU',
+  apiKey: 'ad89ae26e0c192a876966896e08774da',
+  indexName: 'susecom',
   inputSelector: '#search-input',
   autocompleteOptions: { hint: false, keyboardShortcuts: ['s'] },
   algoliaOptions: { hitsPerPage: 10 }
