Let twitter link icon be always at the right end of the header bar

--- a/branding/supplemental-ui/suma-susecom/css/site-extra.css
+++ b/branding/supplemental-ui/suma-susecom/css/site-extra.css
@@ -85,3 +85,8 @@ i.fa.icon-warning:before {
 i.fa.icon-caution:before {
   background: no-repeat url("../img/caution.svg");
 }
+
+/* HACK to fix https://github.com/SUSE/doc-susemanager/issues/567 */
+#twitter-link {
+  float: right;
+}
