--- a/branding/supplemental-ui/uyuni/uyuni-depreciated/partials/footer-content.hbs
+++ b/branding/supplemental-ui/uyuni/uyuni-depreciated/partials/footer-content.hbs
@@ -7,7 +7,7 @@ function focusSearchInput () { document.querySelector('#search-input').focus() }
 var search = docsearch({
   appId: 'JTG0JH5IZ8',
   apiKey: '53832c21604e3e7cd2d1062f84b72f22',
-  indexName: 'uyuni-depreciated',
+  indexName: 'uyuni',
   inputSelector: '#search-input',
   autocompleteOptions: { hint: false, keyboardShortcuts: ['s'] },
   algoliaOptions: { hitsPerPage: 10 }
