--- a/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
@@ -1,7 +1,7 @@
 <header class="header" role="banner">
   <div class="navbar">
     <div class="navbar-brand">
-        <a class="navbar-item" href="{{or site.url (or siteRootUrl siteRootPath)}}">{{site.title}} // Development</a>
+        <a class="navbar-item" href="{{or site.url (or siteRootUrl siteRootPath)}}">{{site.title}} // Develop</a>
         <!-- <div class="navbar-item">
 
          <a class=" navbar-logo" href="https://www.suse.com/documentation/suse-manager-4/index.html"><img
