added new susecom branding bundle based on new default ui. added left tocbot, and next and previous button partials.

--- a/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
@@ -10,4 +10,20 @@
 <script async src="{{uiRootPath}}/../search-index.js"></script>
 {{/if}}
 <script src="{{uiRootPath}}/js/vendor/highlight.js"></script>
-<script>hljs.initHighlighting()</script>
+<!-- <script>hljs.initHighlighting()</script> -->
+<!-- On This Page TOC -->
+<script src="{{uiRootPath}}/js/vendor/tocbot.min.js"></script>
+<script>
+    tocbot.init( {
+        tocSelector: '#article-toc',
+        contentSelector: 'article',
+        headingSelector: 'h2, h3, h4, h5, h6',
+        collapseDepth: 6,
+        positionFixedSelector: '#article-toc',
+        scrollSmooth: false
+    } );
+    var tocList = document.getElementById( 'article-toc' ).getElementsByClassName( 'toc-list' );
+    if ( tocList && tocList.length > 0 && tocList[0].childNodes.length > 0 ) {
+        document.getElementById( 'article-toc' ).parentNode.classList.remove( 'hidden' );
+    }
+</script>
