--- a/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
+++ b/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
@@ -1,59 +1,3 @@
-/* .navbar-brand .navbar-item + .navbar-item {
-  -ms-flex-positive: 1;
-  -webkit-box-flex: 1;
-  flex-grow: 1;
-  -ms-flex-pack: end;
-  -webkit-box-pack: end;
-  justify-content: flex-end;
-}
-
-.algolia-autocomplete .ds-dropdown-menu [class^=ds-dataset-] {
-  max-height: calc(100vh - 3.25rem);
-}
-
-@media screen and (max-width: 768px) {
-  .navbar-brand .navbar-item + .navbar-item {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .algolia-autocomplete .ds-dropdown-menu {
-    min-width: calc(100vw - 2.75rem) !important;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .navbar-brand {
-    -ms-flex-positive: 1;
-    -webkit-box-flex: 1;
-    flex-grow: 1;
-  }
-
-  .navbar-menu {
-    -ms-flex-positive: 0;
-    -webkit-box-flex: 0;
-    flex-grow: 0;
-  }
-}
-
-#search-input {
-  color: #333;
-  font-family: inherit;
-  font-size:  0.95rem;
-  width: 150px;
-  border: 1px solid #dbdbdb;
-  border-radius: 0.1em;
-  line-height:  1.5;
-  padding: 0 0.25em;
-}
-
-@media screen and (min-width: 769px) {
-  #search-input {
-    width: 200px;
-  }
-}
-*/
-
 
 /* Font Awesome 5 Admonition Support */
 .doc .admonitionblock .icon {
@@ -92,4 +36,69 @@ i.fa.icon-caution:before {
 #twitter-link {
   float: right;
 }
+
+.navbar {
+  background-color: #f1f1f2;
+  color: #000;
+  border-bottom: 4px;
+  border-bottom-style: solid;
+  border-bottom-color: #02d35f;
+}
+
+.doc h1, .doc h2, .doc h3, .doc h4, .doc h5, .doc h6 {
+  color: #3dd35f;
+}
+
+.nav-menu {
+  background-color: #f4f4f4;
+}
+
+a:hover {
+  color: #00b2e2;
+  text-decoration: none;
+}
+
+.toc-link.is-active-link {
+  font-weight: 600;
+  color: #00D35F;
+}
+
+.doc a, .doc a:visited {
+  color: #00b2e2;
+}
+
+
+.doc a:hover {
+  color: #3dd35f;
+}
+
+.toolbar {
+  color: #686565;
+  background-color: #e0dfdf;
+  -webkit-box-shadow: 0 1px 0 #e1e1e1;
+  box-shadow: 0 1px 0 #e1e1e1;
+}
+
+@media screen and (min-width: 1025px) {
+  .article-aside {
+    right: 50px;
+  }
+}
+
+.logo {
+  max-height: 35px;
+}
+
+.nav-panel-explore .context {
+
+  background-color: #e0dfdf ;
+}
+
+.nav-panel-explore .component .is-current a {
+  border-color: #00c081;
+  background-color: #00c081;
+  font-weight: 500;
+  color: #fff;
+}
+
 
