--- a/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
+++ b/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
@@ -1,5 +1,3 @@
-
-/* Font Awesome 5 Admonition Support */
 .doc .admonitionblock .icon {
   border-radius: 1rem;
 }
@@ -101,9 +99,9 @@ a:hover {
   color: #fff;
 }
 
-.fa, .fas {
+/* .fa, .fas {
   font-family: inherit;
   font-weight: 900;
 }
-
+*/
 
