fixed admonition text - now inherits correctly

--- a/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
+++ b/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
@@ -1,3 +1,15 @@
+i.fa[title='Note'] {
+  font-family: inherit;
+}
+
+i.fa[title='Important'] {
+  font-family: inherit;
+}
+
+i.fa[title='Warning'] {
+  font-family: inherit;
+}
+/* enable icons on admonitions
 .doc .admonitionblock .icon {
   border-radius: 1rem;
 }
@@ -9,6 +21,8 @@ i.fa[class^='icon-'], i.fa[class*=' icon-']:before {
   margin-right: 0.25rem;
   margin-left: -0.5rem;
 }
+
+
 
 i.fa.icon-note:before {
   background: no-repeat url("../img/note.svg");
@@ -29,7 +43,7 @@ i.fa.icon-warning:before {
 i.fa.icon-caution:before {
   background: no-repeat url("../img/caution.svg");
 }
-
+*/
 /* HACK to fix https://github.com/SUSE/doc-susemanager/issues/567 */
 #twitter-link {
   float: right;
@@ -98,6 +112,5 @@ a:hover {
   font-weight: 500;
   color: #fff;
 }
-
 
 
