--- a/branding/supplemental-ui/suma/susecom/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom/css/site-extra.css
@@ -1,6 +1,17 @@
+i.fa[title='Note'] {
+  font-family: inherit;
+}
+
+i.fa[title='Important'] {
+  font-family: inherit;
+}
+
+i.fa[title='Warning'] {
+  font-family: inherit;
+}
 
 /* Font Awesome 5 Admonition Support */
-.doc .admonitionblock .icon {
+/*.doc .admonitionblock .icon {
   border-radius: 1rem;
 }
 
@@ -31,7 +42,7 @@ i.fa.icon-warning:before {
 i.fa.icon-caution:before {
   background: no-repeat url("../img/caution.svg");
 }
-
+*/
 /* HACK to fix https://github.com/SUSE/doc-susemanager/issues/567 */
 #twitter-link {
   float: right;
