update to asside font

--- a/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
+++ b/branding/supplemental-ui/suma/suma-ghpages/css/site-extra.css
@@ -113,4 +113,11 @@ a:hover {
   color: #fff;
 }
 
+html, body {
+  text-rendering: optimizeLegibility;
+  font-family: 'Roboto', sans-serif;
+}
 
+.article-aside {
+  font-family: 'Montserrat', sans-serif;
+}
