--- a/branding/supplemental-ui/suma/suma-ghpages/partials/head-meta.hbs
+++ b/branding/supplemental-ui/suma/suma-ghpages/partials/head-meta.hbs
@@ -3,3 +3,4 @@
 <link rel="stylesheet" href="{{uiRootPath}}/css/font-styles.css">
 <link rel="stylesheet" href="{{uiRootPath}}/fonts/css/all.css">
 <link rel="stylesheet" href="{{uiRootPath}}/css/site-extra.css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
