fixed overflow on sidebar with ellipses

--- a/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
@@ -9,7 +9,8 @@
         </div> -->
       {{#if env.DOCSEARCH_ENABLED}}
         <div class="navbar-item">
-          <input id="search-input" type="text" placeholder="Search docs">
+           <!-- <i class="fas fa-search"></i>&nbsp; -->
+          <input id="search-input" type="text" placeholder="Search">
         </div>
       {{/if}}
       <button class="navbar-burger" data-target="topbar-nav">
