removed duplicate index pages, updated ifevals, updated uyuni theme and uyuni Makefile commands

--- a/branding/supplemental-ui/suma/susecom/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/header-content.hbs
@@ -27,7 +27,7 @@
                       <a class="navbar-item" href="https://github.com/SUSE/doc-susemanager/issues"><i
                               class="fab fa-github"></i>&nbsp;Report Issue</a>
                       <a class="navbar-item"
-                         href="https://github.com/SUSE/doc-susemanager/wiki/Asciidoc-getting-started"><i
+                         href="https://github.com/SUSE/doc-susemanager/wiki#contributing"><i
                               class="fas fa-user-edit"></i>&nbsp;Contribute</a>
                   </div>
               </div>
