--- a/branding/supplemental-ui/uyuni/uyuni-webui/partials/header-content.hbs
+++ b/branding/supplemental-ui/uyuni/uyuni-webui/partials/header-content.hbs
@@ -8,9 +8,12 @@
         <span class="separator">//</span>
           <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Documentation</a> -->
             </div>
-            <div class="navbar-item">
-                <input id="search-input" type="text" placeholder="Search docs">
-            </div>
+            {{#if env.DOCSEARCH_ENABLED}}
+                <div class="navbar-item">
+                    <!-- <i class="fas fa-search"></i>&nbsp; -->
+                    <input id="search-input" type="text" placeholder="Search...">
+                </div>
+            {{/if}}
             <button class="navbar-burger" data-target="topbar-nav">
                 <span></span>
                 <span></span>
@@ -29,7 +32,7 @@
                         <a class="navbar-item" href="https://github.com/uyuni-project/uyuni-docs/issues"><i
                                 class="fab fa-github"></i>&nbsp;Report Issue</a>
                         <a class="navbar-item"
-                           href="https://github.com/SUSE/doc-susemanager/wiki/Asciidoc-getting-started"><i
+                           href="https://github.com/SUSE/doc-susemanager/wiki#contributing"><i
                                 class="fas fa-user-edit"></i>&nbsp;Contribute</a>
                     </div>
                 </div>
