added tooltips to navigation buttons, added glossary function WIP

--- a/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
@@ -1,3 +1,30 @@
+<script src="https://unpkg.com/popper.js@1"></script>
+<script src="https://unpkg.com/tippy.js@4"></script>
+<script>
+    tippy.setDefaults({
+        placement: 'bottom',
+        arrow: true,
+        arrowType: 'sharp',
+        delay: 0,
+        theme: 'light',
+    });
+
+    tippy('#previousPage', {
+        content: "Previous Page",
+    });
+
+    tippy('#nextPage', {
+        content: "Next Page",
+    });
+
+    tippy('#createIssue', {
+        content: "Create Issue",
+    });
+
+    tippy('#submitPR', {
+        content: "Edit this page and submit a pull request",
+    });
+</script>
 <script type="text/javascript">
   window.antora = window.antora || {}
   window.antora.basePath = '{{or siteRootPath (or site.url siteRootUrl)}}'
