--- a/branding/supplemental-ui/uyuni/uyuni-webui/css/site-extra.css
+++ b/branding/supplemental-ui/uyuni/uyuni-webui/css/site-extra.css
@@ -196,3 +196,20 @@ a:hover {
   color: #25bbbf;
 }
 
+/*.channels {
+  color: #A7A9AC;
+}
+
+.ubuntu {
+  color: #A7A9AC;
+}
+
+.salt {
+  color: #A7A9AC;
+}
+*/
+
+.gloss {
+  color: #ED6924;
+}
+
