--- a/branding/supplemental-ui/suma/susecom/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom/css/site-extra.css
@@ -119,3 +119,11 @@ html, body {
 .article-aside {
   font-family: 'Montserrat', sans-serif;
 }
+
+.fa-file-pdf {
+  color: #00C081;
+}
+
+.fa-file-archive {
+  color: #00C081;
+}
