--- a/branding/supplemental-ui/suma/susecom/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/header-content.hbs
@@ -2,7 +2,7 @@
   <div class="navbar">
     <div class="navbar-brand">
         <div class="navbar-item">
-        <a class=" navbar-logo" href="https://www.suse.com/documentation/suse-manager-4/index.html"><img
+        <a class=" navbar-logo" href="https://documentation.suse.com/suma/4.0/"><img
                 class="logo" src="{{uiRootPath}}/img/suse_logo.png"/></a>
         </div>
       {{#if env.DOCSEARCH_ENABLED}}
