added comment on gloss terms

--- a/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
@@ -5,7 +5,7 @@
         placement: 'bottom',
         arrow: true,
         arrowType: 'sharp',
-        delay: 0,
+        delay: 300,
         theme: 'light',
     });
 
@@ -24,6 +24,10 @@
     tippy('#submitPR', {
         content: "Edit this page and submit a pull request",
     });
+
+   <!-- tippy('#salt', {
+        content: "Salt is a fine seasoning for brave dishes",
+    }); -->
 </script>
 <script type="text/javascript">
   window.antora = window.antora || {}
