updated css and makefile for publishing to susecom

--- a/branding/supplemental-ui/suma/susecom/css/site-extra.css
+++ b/branding/supplemental-ui/suma/susecom/css/site-extra.css
@@ -9,9 +9,8 @@ i.fa[title='Important'] {
 i.fa[title='Warning'] {
   font-family: inherit;
 }
-
-/* Font Awesome 5 Admonition Support */
-/*.doc .admonitionblock .icon {
+/* enable icons on admonitions
+.doc .admonitionblock .icon {
   border-radius: 1rem;
 }
 
@@ -22,6 +21,8 @@ i.fa[class^='icon-'], i.fa[class*=' icon-']:before {
   margin-right: 0.25rem;
   margin-left: -0.5rem;
 }
+
+
 
 i.fa.icon-note:before {
   background: no-repeat url("../img/note.svg");
@@ -127,4 +128,3 @@ html, body {
 .fa-file-archive {
   color: #00C081;
 }
-
