--- a/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
+++ b/branding/supplemental-ui/suma/susecom/partials/footer-scripts.hbs
@@ -5,7 +5,7 @@
         placement: 'bottom',
         arrow: true,
         arrowType: 'sharp',
-        delay: 300,
+        delay: 0,
         theme: 'light',
     });
 
@@ -24,10 +24,6 @@
     tippy('#submitPR', {
         content: "Edit this page and submit a pull request",
     });
-
-   <!-- tippy('#salt', {
-        content: "Salt is a fine seasoning for brave dishes",
-    }); -->
 </script>
 <script type="text/javascript">
   window.antora = window.antora || {}
@@ -41,8 +37,7 @@
 <script async src="{{uiRootPath}}/../search-index.js"></script>
 {{/if}}
 <script src="{{uiRootPath}}/js/vendor/highlight.js"></script>
-<!-- <script>hljs.initHighlighting()</script> -->
-<!-- On This Page TOC -->
+<script>hljs.initHighlighting()</script>
 <script src="{{uiRootPath}}/js/vendor/tocbot.min.js"></script>
 <script>
     tocbot.init( {
