un-german twitter link

--- a/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
+++ b/branding/supplemental-ui/suma/suma-ghpages/partials/header-content.hbs
@@ -37,7 +37,7 @@
 
           </div>
       </div>
-      <a id="twitter-link" class="navbar-item" href="https://twitter.com/susemanager?lang=de">
+      <a id="twitter-link" class="navbar-item" href="https://twitter.com/susemanager">
           <span class="icon">
             <svg aria-hidden="true" data-icon="twitter" role="img" xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 512 512">
